(feat, index.html): agrega header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, Luis!, este es una segunda prueba</h1>
+    <header class="container-fluid bg-secondary text-white py-4">
+        <h1>Bienvenidos a mi sitio web</h1>
+    </header>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
