(feat, index.html): agrega footer

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <h1>Bienvenidos a mi sitio web</h1>
     </header>
 
+    <footer class="containe-fluid">
+        <p>Copyrigth GNUD 2022</p>
+    </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
