(feat, index.html): agrega estilos al footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Bienvenidos a mi sitio web</h1>
     </header>
 
-    <footer class="containe-fluid">
+    <footer class="containe-fluid bg-dark text-white text-center">
         <p>Copyrigth GNUD 2022</p>
     </footer>
     <!-- Optional JavaScript; choose one of the two! -->
