(feat, index.html): texto footer en negrita

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <footer class="containe-fluid bg-dark text-white text-center">
-        <p>Copyrigth GNUD 2022</p>
+        <p><strong>GNUD 2022</strong></p>
     </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
