(feat, index.html): crea about acerca de mi

--- a/index.html
+++ b/index.html
@@ -12,8 +12,26 @@
   </head>
   <body>
     <header class="container-fluid bg-secondary text-white py-4">
-        <h1>Bienvenidos a mi sitio web de la rama_temporal</h1>
+        <h1>Bienvenidos a mi sitio web</h1>
     </header>
+    <main class="container mt-3">
+      <section class="row">
+        <div class="col-12 col-lg">
+          <img src="christmas-in-the-mountains-1-1359215.jpg" alt="imagenes">
+        </div>
+        <div class="col-12 col-lg">
+          <h3 class="mt-0 mb-1">GNUno</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+               Ducimus id, commodi aperiam officiis fugit dicta beatae nam tenetur nihil velit, 
+               fugiat sequi exercitationem optio? Iure facilis natus quibusdam dolorem molestiae?</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, veritatis quam 
+              libero at eveniet unde in provident molestiae officia? Corrupti dolor architecto sit 
+              quisquam recusandae tenetur vel reiciendis inventore ab.
+            </p>
+        </div>
+      </section>
+    </main>
 
     <footer class="containe-fluid bg-dark text-white text-center">
         <strong><p id="footer"> </p></strong>
